--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <h1 id="pokemon-name">Nombre de Pokemon</h1>
+    <div id="pokemon-height"></div>>
     <script type="text/javascript" src="app.js"></script>
     </body>
 
